# djangocms-cascade

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  BOOSTRAP-4.md  LICENSE-MIT  MANIFEST.in  README.md  README.rst  bower.json  package.json  pytest.ini  requirements.txt  schemamigration.py  setup.py  test_requirements.txt  test_settings.py  testsettings.py  testurls.py  tox.ini
.tx/: config
cmsplugin_bootstrap/: buttons.py  carousel.py  change_form_widgets.py  cms_plugins.py  container.py  models.py  plugin_base.py  settings.py  thumbnails.py  widgets.py
cmsplugin_cascade/: __init__.py  admin.py  app_settings.py  apps.py  auth_backend.py  cms_plugins.py  cms_toolbars.py  content_renderers.py  dynamic_preferences_registry.py  fields.py  forms.py  helpers.py  hide_plugins.py  image.py  loader.py  minions.py  mixins.py  models.py  models_base.py  plugin_base.py  render_template.py  settings.py  strides.py  utils.py  utils_helpers.py  views.py  widgets.py
djangocms_style/: cms_plugins.py  models.py
docs/: Makefile  make.bat
examples/: .coveragerc  manage.py  package.json  pyproject.toml  requirements.txt
examples/bootstrap3/: context_processors.py  settings.py  test_settings.py
examples/bootstrap3/templates/: base.html  main.html
examples/bootstrap3/tests/: __init__.py  button.py  test_button.py
examples/bs3demo/: cms_plugins.py  context_processors.py  requirements.txt  settings.py  urls.py  utils.py
examples/bs3demo/static/bs3demo/cascades/: strides.json
examples/bs3demo/static/bs3demo/css/: _header.scss  _variables.scss  badge.scss  main.scss
examples/bs3demo/static/css/: main.scss
examples/bs3demo/templates/: base.html  main.html  testing.html  wrapped.html
examples/bs3demo/templates/bs3demo/: badge.html  base.html  main.html  strides.html  wrapped.html
examples/bs3demo/tests/: requirements.txt  settings.py  test_base.py  test_button.py  test_container.py  test_http.py  test_image.py  test_picture.py
examples/bs4demo/: cms_plugins.py  pyproject.toml  settings.py  urls.py
examples/bs4demo/bs4demo/: context_processors.py  urls.py
examples/bs4demo/static/bs4demo/css/: _footer.scss  _variables.scss  main.scss
examples/bs4demo/templates/bs4demo/: badge.html  base.html  main.html  strides.html  wrapped.html
examples/gs960/: settings.py
examples/gs960/static/css/: main.css
examples/gs960/templates/: main.html
examples/test_bootstrap3/templates/: base.html
examples/test_bootstrap3/tests/: button.py  carousel.py
examples/testapp/: settings.py  urls.py
examples/testapp/static/css/: main.css
examples/testapp/templates/: base.html  main.html
examples/testapp/tests/: button.py  carousel.py
requirements/: base.txt  devel.txt  develop.txt  (+4 more)
(+642 files in other folders)
