[tool.poetry]
name = "bs4demo"
version = "1.1.5"
description = "djangocms-cascade demo"
authors = ["Jacob Rief <jacob.rief@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
django = "*"
django-cms = { git = "https://github.com/django-cms/django-cms", branch="release/4.0.x" }
djangocms-alias =  { git = "https://github.com/divio/djangocms-alias", branch="master" }
djangocms-ckeditor = { git = "https://github.com/django-cms/djangocms-text-ckeditor", branch="support/4.0.x" }
djangocms-cascade =  "*"
django-compressor = "*"
django-filer =  "*"
django-sass-processor = "*"
django-select2 = "*"
djangocms-bootstrap = "*"
django-admin-sortable2 = "*"
libsass = "*"
djangocms-history = "*"
djangocms-transfer = "*"
django-dynamic-preferences = "*"

[dev-packages]
tox = "*"
pytest = "*"
pytest-django = "*"
beautifulsoup4 = "*"
lxml = "*"
factory-boy = "*"
pytest-factoryboy = "*"
autopep8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
