[tool.poetry]
name = "bs4demo"
version = "1.1.5"
description = "djangocms-cascade demo"
authors = ["Jacob Rief <jacob.rief@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
django = "3.1.*"
django-cms = "3.8.*"
django-treebeard = "4.4.*"
djangocms-cascade =  "^2.0.3"
django-compressor = "*"
django-filer =  "*"
django-sass-processor = "*"
django-select2 = "*"
djangocms-bootstrap = "*"
django-admin-sortable2 = "*"
libsass = "*"
djangocms-history = "*"
djangocms-transfer = "*"
django-dynamic-preferences = "*"

[dev-packages]
tox = "*"
pytest = "*"
pytest-django = "*"
beautifulsoup4 = "*"
lxml = "*"
factory-boy = "*"
pytest-factoryboy = "*"
autopep8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
